Replace use of `.takeUntilIndexed`
Should be looked at carefully.